<resources>
    <string name="app_name">Mobile Messaging App</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <!--  TODO: Remove or change this placeholder text  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="update_information">Update information</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm password</string>

    <string name="status">status</string>
    <string name="you_must_enter_your_current_password">You must enter your current password</string>
    <string name="you_must_enter_your_new_password">You must enter your new password</string>
    <string name="you_must_confirm_new_password">You must confirm new password</string>
    <string name="new_pasword_must_different_old_password">New pasword must different old password</string>
    <string name="update_failed">Update Failed</string>
    <string name="new_password_and_confirm_new_password_must_be_the_same">New password and confirm new password must be the same</string>
    <string name="current_password_is_wrong">Current password is wrong!</string>
    <string name="update_successfully">Update Successfully!</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="search">Search</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="set">SET</string>
    <string name="add_friend">Add friend</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="mobile_messaging_app">Mobile Messaging App</string>
    <string name="view_profile">View profile</string>
    <string name="view_image">View Image</string>
    <string name="delete_chat">Delete chat</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="activited_at">Activited at: </string>
    <string name="select_the_file">Select the file</string>
    <string name="please_enter_message">Please enter message</string>
    <string name="message_sent_successfully">Message sent successfully</string>
    <string name="sending_file">Sending file</string>
    <string name="please_wait">Please wait...</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="group">Group</string>
    <string name="find_friend">Find Friend</string>
    <string name="check_your_email">Check your email</string>
    <string name="request">Request</string>
    <string name="log_in_first_time">Are you logging in for the first time? You must first update your personal information</string>
    <string name="profile">Profile</string>
    <string name="please_update_profile">Please update profile</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_date_of_birth">Please enter date of birth</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="update_profile_successfully">Update Profile Successfully!</string>
    <string name="set_profile_image">Set profile image</string>
    <string name="upload_successfully">Upload successfully</string>
    <string name="permission"><![CDATA[If you reject permission,you can not use this service\n\nPlease turn on permissions at [Setting] > [Permission]]]></string>
    <string name="accept_friend">Accept friend</string>
    <string name="cancel_add_friend">Cancel add friend</string>
    <string name="unfriend">Unfriend</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="signing_in">Sign in...</string>
    <string name="please_verification_email">Please verification email</string>
    <string name="sign_in_failed">Sign in failed!</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="confirm_same_pass">Confirm password must be same as Password</string>
    <string name="creating_new_account">Creating new account...</string>
    <string name="sign_up_success">Sign Up Success!</string>
    <string name="do_you_want_go_to_sign_in">Do you want go to Sign In?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sign_up_failed">Sign Up Failed!</string>
    <string name="enter_group_name">Enter group name:</string>
    <string name="create">Create</string>
    <string name="please_enter_group_name">Please enter group name</string>
    <string name="created_group"> group is created successfully!</string>
    <string name="my_profile">My profile</string>
    <string name="sign_out">Sign out</string>
    <string name="notifications_and_sound">Notifications and Sound</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="do_you_want_sign_out">Do you want sign out?</string>
    <string name="accept">Accept</string>
    <string name="request_friend">request friend</string>
    <string name="added">Added</string>
    <string name="deleted">Deleted</string>
    <string name="you_are_offline">You are offline</string>
    <string name="message">Message</string>
    <string name="english" translatable="false">English</string>
    <string name="viet" translatable="false">Tiếng Việt</string>
    <string name="under_development">This function is currently under development</string>
    <string name="want_delete_chat">Do you want delete chat?</string>
    <string name="dark_mode">Dark mode</string>
</resources>