<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPassword"
    android:padding="20dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_email"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/edtEmailFP"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:textSize="18sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancelFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/btnConfirmFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:background="@drawable/button"/>
    </LinearLayout>

</LinearLayout>