<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignIn"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center"
    >
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sign_in"
        android:textColor="#323131"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtEmailSIWrapper"
        android:layout_width="match_parent"
        app:hintEnabled="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailSI"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:nextFocusDown="@id/edtPasswordSI"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPasswordSIWrapper"
        android:layout_width="match_parent"
        app:hintEnabled="true"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPasswordSI"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:nextFocusDown="@id/btnSignIn"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/sign_in"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textSize="14sp"
        android:layout_marginBottom="20dp"/>
</LinearLayout>
<!--    android:imeOptions="actionNext"-->