<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChangePasswordActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/password_must_be_at_least_6_characters"
        android:gravity="center"
        android:textSize="18sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtCurrentPasswordWrapper"
        android:layout_width="match_parent"
        app:hintEnabled="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtCurrentPassword_cp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/enter_current_password"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtNewPasswordWrapper"
        android:layout_width="match_parent"
        app:hintEnabled="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNewPassword_cp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/enter_new_password" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtConfirmNewPasswordWrapper"
        android:layout_width="match_parent"
        app:hintEnabled="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtConfirmNewPassword_cp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_new_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@drawable/button"/>



</LinearLayout>