<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUp"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/linearlayoutR">
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/logo" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Create Account"
        android:textColor="#323131"
        android:textSize="20dp"
        android:textStyle="bold"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtEmailRWrapper"
        android:layout_width="match_parent"
        app:hintEnabled="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailR"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:nextFocusDown="@+id/edtPasswordR"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPasswordRWrapper"
        android:layout_width="match_parent"
        app:hintEnabled="true"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPasswordR"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:nextFocusDown="@id/edtConfirmPasswordR"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtConfirmPasswordRWrapper"
        android:layout_width="match_parent"
        app:hintEnabled="true"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtConfirmPasswordR"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:text="@string/sign_up" />
    <TextView
        android:id="@+id/tvDoYouhaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/already_have_an_account"
        android:textSize="14sp"
        />
</LinearLayout>