<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileContact"
    android:padding="10dp"
    android:background="@drawable/background">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivContactImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/border_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/avatar"/>

    <LinearLayout
        android:id="@+id/ln1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivContactImage"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/ivUserName"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/icon_usernamep"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/tvContactUserName"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_marginStart="10dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ln1"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/ivEmail"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/icon_email"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/tvContactEmail"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_marginStart="10dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ln10"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/ivDateofBirth"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/icon_datep"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/tvContactDateofBirth"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_marginStart="10dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ln2"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/ivGender"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/icon_genderp"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/tvContactGender"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_marginStart="10dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ln3"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/ivAddressP"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/icon_addressp"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/tvContactAddress"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAddFriend"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/add_friend"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ln4"/>
    <Button
        android:id="@+id/btnCancelFriend"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_red"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddFriend"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>